--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,11 @@
-@import "./mixins";
+
+
 @import "./variables";
+@import "./mixins";
+@import "./jbxButtons";
 @import "./header";
 @import "./footer";
+
+.container {
+    padding: 10px;
+}
